--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+
     <header>
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="logo">
-      <h1 id="mytimes">My Times</h1>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="logo">
+        <span>My Times</span>
+      </div>
       <nav>
-        <ul>
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
-        </ul>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
       </nav>
     </header>
 
