--- a/index.html
+++ b/index.html
@@ -20,5 +20,26 @@
       </nav>
     </header>
 
+<div class="container">
+
+  <!-- First Column -->
+
+  <div class="column.large">
+
+  </div>
+
+  <!-- Second Column -->
+
+  <div class="column.medium">
+
+  </div>
+
+  <!-- Third Column -->
+
+  <div class="column.small">
+
+  </div>
+</div>
+
   </body>
 </html>
